# summary-action

./: .gitignore  .rubocop.yml  CODE_OF_CONDUCT.md  Gemfile  Makefile  README.md  Rakefile  action.yml  diff.txt  open_ai_summary.txt  pull_request_template.md  pyproject.toml  requirements.txt  summary.py  summary.sh  summary_action.gemspec  system_prompt.mdown  system_prompt.txt  test_summary.py
.github/workflows/: description_summarizer.yml  github-actions-demo.yml  main.yml  python.yml
lib/: summary_action.rb
lib/open_ai/: client.rb  summary.rb
lib/summary_action/: diff.rb  generate.rb  version.rb
sig/: summary_action.rbs
spec/: spec_helper.rb  summary_action_spec.rb
spec/fixtures/vcr_cassettes/: openai_send_request.yml  openai_summary_request.yml
spec/open_ai/: client_spec.rb  summary_spec.rb
spec/summary_action/: diff_spec.rb  generate_spec.rb
summary/: generate.py
tests/: test_summary.py
