[tool.poetry]
name = "github-action-summary"
version = "0.2.0"
description = "generating summary for code diff"
authors = ["Stas German <stas.german@gmail.com>"]
readme = "README.md"
packages = [{include = "summary"}]

[tool.poetry.dependencies]
python = ">=3.10"
openai = "^1.51.1"
google-generativeai = "^0.7"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
